# thorough-search

./: .gitignore  .gitmodules  README.md  config.ini  google-autocomplete.cabal  instasearch.cabal  project.nix  thorough-search.cabal
app/: FilterMain.hs  Main.hs  SearchMain.hs
src/: Config.hs  Filter.hs  Instasearch.hs  Lib.hs  Model.hs  Persistence.hs  Scowl.hs  Search.hs  Storage.hs
