name:                thorough-search
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/thorough-search#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Instasearch
                     , Storage
                     , Scowl
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , exceptions
                     , http-client
                     , mtl
                     , lens
                     , lens-aeson
                     , sqlite-simple
                     , text
                     , wreq
  default-language:    Haskell2010

executable search
  hs-source-dirs:      app
  main-is:             SearchMain.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -main-is SearchMain
  build-depends:       base
                     , thorough-search
                     , monad-logger
                     , mtl
                     , sqlite-simple
                     , text
                     , utf8-string
  default-language:    Haskell2010

executable filter
  hs-source-dirs:      app
  main-is:             FilterMain.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -main-is FilterMain
  build-depends:       base
                     , containers
                     , thorough-search
                     , monad-logger
                     , mtl
                     , sqlite-simple
                     , text
                     , utf8-string
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/thorough-search
