name:                thorough-search
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JBetz/thorough-search#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Betz
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Instasearch
                     , Storage
                     , Scowl
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , exceptions
                     , http-client
                     , mtl
                     , lens
                     , lens-aeson
                     , sqlite-simple
                     , text
                     , wreq
  default-language:    Haskell2010

executable search
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , thorough-search
                     , monad-logger
                     , mtl
                     , sqlite-simple
                     , text
                     , utf8-string
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JBetz/thorough-search
