name:                thorough-search
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JBetz/thorough-search#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Betz
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Filter
                     , Model
                     , Search
                     , Storage
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , config-ini
                     , containers
                     , directory
                     , exceptions
                     , http-client
                     , mtl
                     , lens
                     , lens-aeson
                     , path
                     , path-io
                     , smtp-mail
                     , sqlite-simple
                     , text
                     , wreq
                     , zip
  default-language:    Haskell2010

executable search
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens
                     , thorough-search
                     , sqlite-simple
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JBetz/thorough-search
